fix: update button label

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,7 +43,7 @@
           </select>
         </div>
         <div>
-          <button id="runBtn" disabled>3) Run on Server</button>
+          <button id="runBtn" disabled>3) Process Image</button>
         </div>
       </div>
       <p id="msg" class="muted"></p>
