chore: updated CSS

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,8 +19,8 @@
     button:disabled { opacity: 0.5; cursor: not-allowed; }
     .row { display:flex; gap: 12px; align-items: end; }
     .muted { color: #94a3b8; font-size: 14px; }
-    .error { color: #fecaca; }
-    .success { color: #a7f3d0; }
+    .error { color: #ff3131; }
+    .success { color: #33ffa0; }
   </style>
 </head>
 <body>
